--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Banana Speak</title>
+    <title>Banana Speak</title> 
+    <style>
+        #output {
+            border: 1px solid black;
+            height: 10vh;
+            width: 80%;
+            margin: 1rem;
+            padding: 1 rem;
+        }
+    </style>
 </head>
 <body>
     <h1>Talk Bananaaaa</h1>
+
+    <textarea id = "txt-input" placeholder="Enter your text to do the translation"></textarea>
+
+    <button id="btn-translate">Translate</button>
+
+    <div style="font-size: larger;">Output Will come here 👇</div>
+
+    <div id="output"></div>
+
+    <script src="app.js" type="text/javascript"></script>
+
 </body>
 </html>
