--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body>
-    <h1>Talk Bananaaaa</h1>
+    <h1>Shakespear's Soul</h1>
 
     <textarea id = "txt-input" placeholder="Enter your text to do the translation"></textarea>
 
